1.通用查询支持资源品质等级排序，格式orderby=viplevel desc（仅数据库查询支持） 2.安全访问开关默认改为关闭 3.GET请求UC认证关闭

--- a/src/main/resources/config/props/resource_props_range_db.properties
+++ b/src/main/resources/config/props/resource_props_range_db.properties
@@ -315,3 +315,4 @@ order_create_time=create_time
 order_last_update=last_update
 order_statisticals=key_value
 order_sort_num=sort_num
+order_viplevel=taxOnCode
