知慧知识教学目标（多版本）查询，暂时按status排序

--- a/src/main/resources/config/props/resource_props_range_db.properties
+++ b/src/main/resources/config/props/resource_props_range_db.properties
@@ -316,3 +316,4 @@ order_last_update=last_update
 order_statisticals=key_value
 order_sort_num=sort_num
 order_viplevel=taxOnCode
+order_status=estatus
