套件、教学目标类型的code支持自增长

--- a/src/main/resources/config/props/resource_props_range_db.properties
+++ b/src/main/resources/config/props/resource_props_range_db.properties
@@ -13,6 +13,7 @@ assets_tags=tags
 assets_keywords=keywords
 assets_ndres_code=code
 assets_lastupdate=last_update
+assets_description=description
 
 ##CourseWareObject##
 coursewareobjects_creator=creator
@@ -29,6 +30,7 @@ coursewareobjects_tags=tags
 coursewareobjects_keywords=keywords
 coursewareobjects_ndres_code=code
 coursewareobjects_lastupdate=last_update
+coursewareobjects_description=description
 
 ##Tools##
 tools_creator=creator
@@ -45,6 +47,7 @@ tools_tags=tags
 tools_keywords=keywords
 tools_ndres_code=code
 tools_lastupdate=last_update
+tools_description=description
 
 ##CourseWareObjectTemplate##
 coursewareobjecttemplates_creator=creator
@@ -61,6 +64,7 @@ coursewareobjecttemplates_tags=tags
 coursewareobjecttemplates_keywords=keywords
 coursewareobjecttemplates_ndres_code=code
 coursewareobjecttemplates_lastupdate=last_update
+coursewareobjecttemplates_description=description
 
 ##CourseWare##
 coursewares_creator=creator
@@ -78,6 +82,7 @@ coursewares_keywords=keywords
 coursewares_difficulty=difficulty
 coursewares_ndres_code=code
 coursewares_lastupdate=last_update
+coursewares_description=description
 
 ##Question##
 questions_creator=creator
@@ -96,6 +101,7 @@ questions_tags=tags
 questions_keywords=keywords
 questions_ndres_code=code
 questions_lastupdate=last_update
+questions_description=description
 
 ##TeachingMaterial##
 teachingmaterials_creator=creator
@@ -112,6 +118,7 @@ teachingmaterials_tags=tags
 teachingmaterials_keywords=keywords
 teachingmaterials_ndres_code=code
 teachingmaterials_lastupdate=last_update
+teachingmaterials_description=description
 
 ##Lesson##
 lessons_creator=creator
@@ -128,6 +135,7 @@ lessons_tags=tags
 lessons_keywords=keywords
 lessons_ndres_code=code
 lessons_lastupdate=last_update
+lessons_description=description
 
 ##InstructionalObjective##
 instructionalobjectives_creator=creator
@@ -144,6 +152,7 @@ instructionalobjectives_tags=tags
 instructionalobjectives_keywords=keywords
 instructionalobjectives_ndres_code=code
 instructionalobjectives_lastupdate=last_update
+instructionalobjectives_description=description
 
 ##Knowledge##
 knowledges_creator=creator
@@ -160,6 +169,7 @@ knowledges_tags=tags
 knowledges_keywords=keywords
 knowledges_ndres_code=code
 knowledges_lastupdate=last_update
+knowledges_description=description
 
 ##Prototype##
 instructionalprototypes_creator=creator
@@ -192,6 +202,7 @@ ebooks_tags=tags
 ebooks_keywords=keywords
 ebooks_ndres_code=code
 ebooks_lastupdate=last_update
+ebooks_description=description
 
 ##HomeWork##
 homeworks_creator=creator
@@ -208,6 +219,7 @@ homeworks_tags=tags
 homeworks_keywords=keywords
 homeworks_ndres_code=code
 homeworks_lastupdate=last_update
+homeworks_description=description
 
 ##LessonPlans##
 lessonplans_creator=creator
@@ -224,6 +236,7 @@ lessonplans_tags=tags
 lessonplans_keywords=keywords
 lessonplans_ndres_code=code
 lessonplans_lastupdate=last_update
+lessonplans_description=description
 
 ##LearningPlans##
 learningplans_creator=creator
@@ -240,6 +253,7 @@ learningplans_tags=tags
 learningplans_keywords=keywords
 learningplans_ndres_code=code
 learningplans_lastupdate=last_update
+learningplans_description=description
 
 ##GuidanceBooks##
 guidancebooks_creator=creator
@@ -256,6 +270,7 @@ guidancebooks_tags=tags
 guidancebooks_keywords=keywords
 guidancebooks_ndres_code=code
 guidancebooks_lastupdate=last_update
+guidancebooks_description=description
 
 ##Teachingactivities##
 teachingactivities_creator=creator
@@ -273,6 +288,7 @@ teachingactivities_keywords=keywords
 teachingactivities_difficulty=difficulty
 teachingactivities_ndres_code=code
 teachingactivities_lastupdate=last_update
+teachingactivities_description=description
 
 ##eduresource##
 eduresource_creator=creator
@@ -290,6 +306,7 @@ eduresource_tags=tags
 eduresource_keywords=keywords
 eduresource_ndres_code=code
 eduresource_lastupdate=last_update
+eduresource_description=description
 
 ##Common##
 creator=creator
@@ -307,6 +324,7 @@ tags=tags
 keywords=keywords
 ndres_code=code
 lastupdate=last_update
+description=description
 
 ##OrderBy##
 order_title=title
