通用查询新增top，scores,votes,views排序

--- a/src/main/resources/config/props/resource_props_range_db.properties
+++ b/src/main/resources/config/props/resource_props_range_db.properties
@@ -310,9 +310,14 @@ lastupdate=last_update
 
 ##OrderBy##
 order_title=title
-order_size=size
 order_create_time=create_time
 order_last_update=last_update
-order_statisticals=key_value
 order_sort_num=sort_num
 order_viplevel=taxOnCode
+order_size=size
+##统计排序##
+order_statisticals=key_value
+order_top=top
+order_scores=scores
+order_votes=votes
+order_views=views
