--- a/src/main/resources/config/valid/messages_zh_CN.properties
+++ b/src/main/resources/config/valid/messages_zh_CN.properties
@@ -522,6 +522,7 @@ thirdPartyBsysModle.bsysivcconfig.notBlank.validmsg=bsysivcconfig不能为空
 
 ##StatusReviewViewModel4In
 statusReviewViewModel4In.status.notBlank.validmsg=status不能为空
+statusReviewViewModel4In.reviewPerson.notBlank.validmsg=review_person不能为空
 ##StatusReviewTags
 statusReviewTags.operation.notBlank.validmsg=tags中的operation不能为空
 statusReviewTags.tags.notEmpty.validmsg=tags中的tags不能为空
