增加版本时间、提供方式等字段

--- a/src/main/resources/config/valid/messages_zh_CN.properties
+++ b/src/main/resources/config/valid/messages_zh_CN.properties
@@ -449,6 +449,7 @@ resourceViewModel.lifeCycle.status.reg.validmsg=life_cycle.status值不对
 resourceViewModel.lifeCycle.enable.notNull.validmsg=life_cycle.enable不能为空
 resourceViewModel.lifeCycle.provider.maxLength.validmsg=life_cycle.provider不超过100字符
 resourceViewModel.lifeCycle.providerSource.maxLength.validmsg=life_cycle.provider_source不超过500字符
+resourceViewModel.lifeCycle.providerMode.maxLength.validmsg=life_cycle.provider_mode不超过500字符
 resourceViewModel.techInfo.notNull.validmsg=tech_info不能为空
 resourceViewModel.techInfo.format.notBlank.validmsg=tech_info.format不能为空
 resourceViewModel.techInfo.format.maxlength.validmsg=tech_info.format不超过100字符
@@ -471,6 +472,11 @@ resourceViewModel.relations.relationType.maxlength.validmsg=relations.relationTy
 resourceViewModel.relations.label.maxlength.validmsg=relations.label不超过100字符
 resourceViewModel.preview.notNull.validmsg=preview不能为空
 resourceViewModel.ndresCode.maxlength.validmsg=relations.ndres_code不超过100字符
+resourceViewModel.copyright.rightStartDate.maxValue.validmsg=copyright.right_start_date值过大，超过2200/01/01
+resourceViewModel.copyright.rightStartDate.minValue.validmsg=copyright.right_start_date值过小，小于2000/01/01
+resourceViewModel.copyright.rightEndDate.maxValue.validmsg=copyright.right_end_date值过大，超过2200/01/01
+resourceViewModel.copyright.rightEndDate.minValue.validmsg=copyright.right_end_date值过小，小于2000/01/01
+
 #特殊属性
 InstructionalObjectiveViewModel.title.maxlength.validmsg=title不超过1000个字符
 
