--- a/src/main/resources/config/props/resource_props_range_db.properties
+++ b/src/main/resources/config/props/resource_props_range_db.properties
@@ -30,6 +30,22 @@ coursewareobjects_keywords=keywords
 coursewareobjects_ndres_code=code
 coursewareobjects_lastupdate=last_update
 
+##ExaminationPaper##
+examinationpapers_creator=creator
+examinationpapers_publisher=publisher
+examinationpapers_title=title
+examinationpapers_status=estatus
+examinationpapers_author=author
+examinationpapers_provider=provider
+examinationpapers_create_time=create_time
+examinationpapers_identifier=identifier
+examinationpapers_language=elanguage
+examinationpapers_edulanguage=edu_language
+examinationpapers_tags=tags
+examinationpapers_keywords=keywords
+examinationpapers_ndres_code=code
+examinationpapers_lastupdate=last_update
+
 ##Tools##
 tools_creator=creator
 tools_publisher=publisher
