--- a/src/main/resources/config/props/resource_props_range_es.properties
+++ b/src/main/resources/config/props/resource_props_range_es.properties
@@ -30,6 +30,23 @@ coursewareobjects_keywords=keywords
 coursewareobjects_ndres_code=ndres_code
 coursewareobjects_lastupdate=lc_last_update
 
+##ExaminationPaper##
+examinationpapers_creator=lc_creator
+examinationpapers_publisher=lc_publisher
+examinationpapers_title=title
+examinationpapers_status=lc_status
+examinationpapers_author=cr_author
+examinationpapers_provider=lc_provider
+examinationpapers_create_time=lc_create_time
+examinationpapers_identifier=identifier
+examinationpapers_language=language
+examinationpapers_edulanguage=edu_language
+examinationpapers_tags=tags
+examinationpapers_keywords=keywords
+examinationpapers_ndres_code=ndres_code
+examinationpapers_lastupdate=lc_last_update
+
+
 ##Tools##
 tools_creator=lc_creator
 tools_publisher=lc_publisher
