1、新增资源类型元课程（metacurriculums） 2、新增根据教材查询章节关联资源接口

--- a/src/main/resources/config/props/resource_props_range_es.properties
+++ b/src/main/resources/config/props/resource_props_range_es.properties
@@ -273,6 +273,22 @@ guidancebooks_keywords=keywords
 guidancebooks_ndres_code=ndres_code
 guidancebooks_lastupdate=lc_last_update
 
+##MetaCurriculums##
+metacurriculums_creator=lc_creator
+metacurriculums_publisher=lc_publisher
+metacurriculums_title=title
+metacurriculums_status=lc_status
+metacurriculums_author=cr_author
+metacurriculums_provider=lc_provider
+metacurriculums_create_time=lc_create_time
+metacurriculums_identifier=identifier
+metacurriculums_language=language
+metacurriculums_edulanguage=edu_language
+metacurriculums_tags=tags
+metacurriculums_keywords=keywords
+metacurriculums_ndres_code=ndres_code
+metacurriculums_lastupdate=lc_last_update
+
 ##Teachingactivities##
 teachingactivities_creator=lc_creator
 teachingactivities_publisher=lc_publisher
