--- a/src/main/resources/config/props/resource_props_range_db.properties
+++ b/src/main/resources/config/props/resource_props_range_db.properties
@@ -273,6 +273,22 @@ guidancebooks_keywords=keywords
 guidancebooks_ndres_code=code
 guidancebooks_lastupdate=last_update
 
+##MetaCurriculums##
+metacurriculums_creator=creator
+metacurriculums_publisher=publisher
+metacurriculums_title=title
+metacurriculums_status=estatus
+metacurriculums_author=author
+metacurriculums_provider=provider
+metacurriculums_create_time=create_time
+metacurriculums_identifier=identifier
+metacurriculums_language=elanguage
+metacurriculums_edulanguage=edu_language
+metacurriculums_tags=tags
+metacurriculums_keywords=keywords
+metacurriculums_ndres_code=code
+metacurriculums_lastupdate=last_update
+
 ##Teachingactivities##
 teachingactivities_creator=creator
 teachingactivities_publisher=publisher
