--- a/src/main/resources/config/valid/messages_zh_CN.properties
+++ b/src/main/resources/config/valid/messages_zh_CN.properties
@@ -539,3 +539,7 @@ resourceProviderViewModel.title.maxlength.validmsg=title长度不超过100字符
 ##CopyrightOwnerViewModel
 copyrightOwnerViewModel.title.notBlank.validmsg=title不能为空
 copyrightOwnerViewModel.title.maxlength.validmsg=title长度不超过200字符
+
+##CoverageSharingViewModel
+coverageSharingViewModel.sourceCoverage.notBlank.validmsg=source_coverage不能为空
+coverageSharingViewModel.targetCoverage.notBlank.validmsg=target_coverage不能为空
