课件颗粒通用查询支持difficulty过滤查询

--- a/src/main/resources/config/props/resource_props_range_db.properties
+++ b/src/main/resources/config/props/resource_props_range_db.properties
@@ -29,6 +29,7 @@ coursewareobjects_tags=tags
 coursewareobjects_keywords=keywords
 coursewareobjects_ndres_code=code
 coursewareobjects_lastupdate=last_update
+coursewareobjects_difficulty=difficulty
 
 ##ExaminationPaper##
 examinationpapers_creator=creator
