--- a/src/main/resources/config/props/resource_props_range_es.properties
+++ b/src/main/resources/config/props/resource_props_range_es.properties
@@ -29,6 +29,7 @@ coursewareobjects_tags=tags
 coursewareobjects_keywords=keywords
 coursewareobjects_ndres_code=ndres_code
 coursewareobjects_lastupdate=lc_last_update
+coursewareobjects_difficulty=difficulty
 
 ##ExaminationPaper##
 examinationpapers_creator=lc_creator
@@ -349,7 +350,7 @@ order_last_update=lc_last_update
 order_sort_num=sort_num
 order_viplevel=cg_taxoncode
 #order_statisticals=key_value
-##Í³¼ÆÅÅÐò##
+##Í³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½##
 order_statisticals=sta_key_value
 order_top=top
 order_scores=scores
