合并有问题

--- a/src/main/resources/config/props/resource_props_range_db.properties
+++ b/src/main/resources/config/props/resource_props_range_db.properties
@@ -30,11 +30,8 @@ coursewareobjects_tags=tags
 coursewareobjects_keywords=keywords
 coursewareobjects_ndres_code=code
 coursewareobjects_lastupdate=last_update
-<<<<<<< HEAD
 coursewareobjects_description=description
-=======
 coursewareobjects_difficulty=difficulty
->>>>>>> remotes/origin/develop
 
 ##ExaminationPaper##
 examinationpapers_creator=creator
@@ -369,7 +366,7 @@ order_last_update=last_update
 order_sort_num=sort_num
 order_viplevel=taxOnCode
 order_size=size
-##Í³¼ÆÅÅÐò##
+##Í³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½##
 order_statisticals=key_value
 order_sort_num=sort_num
 order_viplevel=taxOnCode
