titan支持description查询、status排序

--- a/src/main/resources/config/props/resource_props_range_es.properties
+++ b/src/main/resources/config/props/resource_props_range_es.properties
@@ -13,6 +13,7 @@ assets_tags=tags
 assets_keywords=keywords
 assets_ndres_code=ndres_code
 assets_lastupdate=lc_last_update
+assets_description=description
 
 ##CourseWareObject##
 coursewareobjects_creator=lc_creator
@@ -30,6 +31,7 @@ coursewareobjects_keywords=keywords
 coursewareobjects_ndres_code=ndres_code
 coursewareobjects_lastupdate=lc_last_update
 coursewareobjects_difficulty=edu_difficulty
+coursewareobjects_description=description
 
 ##ExaminationPaper##
 examinationpapers_creator=lc_creator
@@ -46,6 +48,7 @@ examinationpapers_tags=tags
 examinationpapers_keywords=keywords
 examinationpapers_ndres_code=ndres_code
 examinationpapers_lastupdate=lc_last_update
+examinationpapers_description=description
 
 
 ##Tools##
@@ -63,6 +66,7 @@ tools_tags=tags
 tools_keywords=keywords
 tools_ndres_code=ndres_code
 tools_lastupdate=lc_last_update
+tools_description=description
 
 ##CourseWareObjectTemplate##
 coursewareobjecttemplates_creator=lc_creator
@@ -79,6 +83,7 @@ coursewareobjecttemplates_tags=tags
 coursewareobjecttemplates_keywords=keywords
 coursewareobjecttemplates_ndres_code=ndres_code
 coursewareobjecttemplates_lastupdate=lc_last_update
+coursewareobjecttemplates_description=description
 
 ##CourseWare##
 coursewares_creator=lc_creator
@@ -96,6 +101,7 @@ coursewares_keywords=keywords
 coursewares_difficulty=edu_difficulty
 coursewares_ndres_code=ndres_code
 coursewares_lastupdate=lc_last_update
+coursewares_description=description
 
 ##Question##
 questions_creator=lc_creator
@@ -113,6 +119,7 @@ questions_keywords=keywords
 questions_difficulty=edu_difficulty
 questions_ndres_code=ndres_code
 questions_lastupdate=lc_last_update
+questions_description=description
 
 ##TeachingMaterial##
 teachingmaterials_creator=lc_creator
@@ -129,6 +136,7 @@ teachingmaterials_tags=tags
 teachingmaterials_keywords=keywords
 teachingmaterials_ndres_code=ndres_code
 teachingmaterials_lastupdate=lc_last_update
+teachingmaterials_description=description
 
 ##Lesson##
 lessons_creator=lc_creator
@@ -145,6 +153,7 @@ lessons_tags=tags
 lessons_keywords=keywords
 lessons_ndres_code=ndres_code
 lessons_lastupdate=lc_last_update
+lessons_description=description
 
 ##InstructionalObjective##
 instructionalobjectives_creator=lc_creator
@@ -161,6 +170,7 @@ instructionalobjectives_tags=tags
 instructionalobjectives_keywords=keywords
 instructionalobjectives_ndres_code=ndres_code
 instructionalobjectives_lastupdate=lc_last_update
+instructionalobjectives_description=description
 
 ##Knowledge##
 knowledges_creator=lc_creator
@@ -177,6 +187,7 @@ knowledges_tags=tags
 knowledges_keywords=keywords
 knowledges_ndres_code=ndres_code
 knowledges_lastupdate=lc_last_update
+knowledges_description=description
 
 ##Prototype##
 instructionalprototypes_creator=lc_creator
@@ -193,6 +204,7 @@ instructionalprototypes_tags=tags
 instructionalprototypes_keywords=keywords
 instructionalprototypes_ndres_code=ndres_code
 instructionalprototypes_lastupdate=lc_last_update
+instructionalprototypes_description=description
 
 ##Ebook##
 ebooks_creator=lc_creator
@@ -209,6 +221,7 @@ ebooks_tags=tags
 ebooks_keywords=keywords
 ebooks_ndres_code=ndres_code
 ebooks_lastupdate=lc_last_update
+ebooks_description=description
 
 ##HomeWork##
 homeworks_creator=lc_creator
@@ -225,6 +238,7 @@ homeworks_tags=tags
 homeworks_keywords=keywords
 homeworks_ndres_code=ndres_code
 homeworks_lastupdate=lc_last_update
+homeworks_description=description
 
 ##LessonPlans##
 lessonplans_creator=lc_creator
@@ -241,6 +255,7 @@ lessonplans_tags=tags
 lessonplans_keywords=keywords
 lessonplans_ndres_code=ndres_code
 lessonplans_lastupdate=lc_last_update
+lessonplans_description=description
 
 ##LearningPlans##
 learningplans_creator=lc_creator
@@ -257,6 +272,7 @@ learningplans_tags=tags
 learningplans_keywords=keywords
 learningplans_ndres_code=ndres_code
 learningplans_lastupdate=lc_last_update
+learningplans_description=description
 
 ##GuidanceBooks##
 guidancebooks_creator=lc_creator
@@ -273,6 +289,7 @@ guidancebooks_tags=tags
 guidancebooks_keywords=keywords
 guidancebooks_ndres_code=ndres_code
 guidancebooks_lastupdate=lc_last_update
+guidancebooks_description=description
 
 ##MetaCurriculums##
 metacurriculums_creator=lc_creator
@@ -289,6 +306,7 @@ metacurriculums_tags=tags
 metacurriculums_keywords=keywords
 metacurriculums_ndres_code=ndres_code
 metacurriculums_lastupdate=lc_last_update
+metacurriculums_description=description
 
 ##Teachingactivities##
 teachingactivities_creator=lc_creator
@@ -306,6 +324,7 @@ teachingactivities_keywords=keywords
 teachingactivities_difficulty=edu_difficulty
 teachingactivities_ndres_code=ndres_code
 teachingactivities_lastupdate=lc_last_update
+teachingactivities_description=description
 
 ##eduresource##
 eduresource_creator=lc_creator
@@ -323,6 +342,7 @@ eduresource_tags=tags
 eduresource_keywords=keywords
 eduresource_ndres_code=ndres_code
 eduresource_lastupdate=lc_last_update
+eduresource_description=description
 
 ##Common##
 creator=lc_creator
@@ -345,6 +365,7 @@ lastupdate=lc_last_update
 ##OrderBy##
 order_title=title
 order_size=ti_size
+order_status=lc_status
 order_create_time=lc_create_time
 order_last_update=lc_last_update
 order_sort_num=sort_num
