增加新资源类型（习题集）的相关接口

--- a/src/main/resources/config/props/resource_props_range_db.properties
+++ b/src/main/resources/config/props/resource_props_range_db.properties
@@ -49,6 +49,22 @@ examinationpapers_keywords=keywords
 examinationpapers_ndres_code=code
 examinationpapers_lastupdate=last_update
 
+##exercisesset##
+exercisesset_creator=creator
+exercisesset_publisher=publisher
+exercisesset_title=title
+exercisesset_status=estatus
+exercisesset_author=author
+exercisesset_provider=provider
+exercisesset_create_time=create_time
+exercisesset_identifier=identifier
+exercisesset_language=elanguage
+exercisesset_edulanguage=edu_language
+exercisesset_tags=tags
+exercisesset_keywords=keywords
+exercisesset_ndres_code=code
+exercisesset_lastupdate=last_update
+
 ##Tools##
 tools_creator=creator
 tools_publisher=publisher
