--- a/src/main/resources/config/props/resource_props_range_es.properties
+++ b/src/main/resources/config/props/resource_props_range_es.properties
@@ -50,6 +50,23 @@ examinationpapers_ndres_code=ndres_code
 examinationpapers_lastupdate=lc_last_update
 examinationpapers_description=description
 
+##exercisesset##
+exercisesset_creator=lc_creator
+exercisesset_publisher=lc_publisher
+exercisesset_title=title
+exercisesset_status=lc_status
+exercisesset_author=cr_author
+exercisesset_provider=lc_provider
+exercisesset_create_time=lc_create_time
+exercisesset_identifier=identifier
+exercisesset_language=language
+exercisesset_edulanguage=edu_language
+exercisesset_tags=tags
+exercisesset_keywords=keywords
+exercisesset_ndres_code=ndres_code
+exercisesset_lastupdate=lc_last_update
+exercisesset_description=description
+
 
 ##Tools##
 tools_creator=lc_creator
