--- a/src/main/resources/config/valid/messages_zh_CN.properties
+++ b/src/main/resources/config/valid/messages_zh_CN.properties
@@ -205,6 +205,7 @@ categoryPatternViewModel.purpose.notBlank.validmsg=purpose不能为空
 categoryPatternViewModel.purpose.maxlength.validmsg=purpose长度不超过100个汉字
 categoryPatternViewModel.description.notBlank.validmsg=description不能为空
 categoryPatternViewModel.description.maxlength.validmsg=description长度不超过200个汉字
+categoryPatternViewModel.gbCode.notBlank.validmsg=gbCode不能为空
 
 ##CategoryRelationViewModel##
 categoryRelationViewModel.source.notBlank.validmsg=source不能为空
